--- a/code/.env
+++ b/code/.env
@@ -1,20 +1,27 @@
-## do not use quotes ##
+#### do not use quotes ####
+
 ## general Settings
+tz=Africa/Johannesburg
+adminMail=wayne.h.philip@protonmail.com
+debug=1
+entitiesAuthRequired=1
 domain=http://localhost:8001
+
+##apiAuth
 api-key=add1106a49ee4f1c5b6297cc1bf9a46a
+api-user-name=waynep
+api-user-pin=4158ac
+
+##apiAccess
 api-host=https://api.skunks.co
 user-api-area=/user
 sites-api-area=/sites
 entities-api-area=/entities/tsc
 mail-api-area=/mail
-api-user-name=waynep
-api-user-pin=4158ac
-## other
-adminMail=wayne.h.philip@protonmail.com
+
+## siteInfo
 imgSuffix=tsc
-debug=1
 siteSlug=tscskunks
 siteMenuLeader=Principle Elements
 siteName=Theewaters Sport Club
 defaultPageSize=15
-tz=Africa/Johannesburg
